I've fixed the stats to finally show near the charactersgit add . I'm so close to finishing this. I still need to get the stats to update selected characters but want to merge for now to make sure changes are visible.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,16 @@ body {
     font-size: 20px;
   }
 
+  #arena-text {
+    color: maroon;
+    background-color: white .5;
+  };
+
+  #fight-outcome {
+    font-size: 30px;
+
+  }
+
    #choose {
        border: none;
        border-color: rgba(169,169,169);
